--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body{
-	background: #000 url("./mathcat_bg.png") no-repeat fixed center;
+	background: #000 url("../images/mathcat_bg.png") no-repeat fixed center;
 	background-size: cover;
 	background-color: white;
 }
