--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,12 @@ body{
 	background-color: white;
 }
 
+h1{
+	color:black;
+	text-align:center;
+	font-family:Times New Roman;
+}
+
 .main{
     /* text-align: center;*/ /*让div内部文字居中*/
     background-color: rgba(255, 255, 255, 0.6);
